2-9 集成热部署

--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,17 @@
         </dependency>
 
         <dependency>
+            <!-- 热部署  -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
