--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 server.port=8881
 test.hello=Hello
+
+#增加数据库连接
+spring.datasource.url=jdbc:mysql://localhost/blogz?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.password=123456
+spring.datasource.username=blogz
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#配置mybatis所有mapper.xml所在的路径
+# classpath就是resources文件夹下
+# mapper文件夹  **无论多少层 *.xml所有xml文件
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
